attempt fix of text color in mobile dark mode

--- a/src/components/layout/layout.module.css
+++ b/src/components/layout/layout.module.css
@@ -1,6 +1,6 @@
 .main {
   display: flex;
-  background-color: white;
+  /* background-color: white; */
 }
 
 .header{
